2005-07-25 Scott Dattalo <scott@dattalo.com>
	* regression/instructions_16bit/instructions_16bit.asm: added
	tests for multi-word instructions.
	* regression/p12ce518/p12ce518.asm: debugging eeprom i2c interface
	* gui/gui_src_opcode.cc, src/16bit-instructions.cc,
	src/16bit-instructions.h: Fixed more problems with address <-->
	index mapping. (and there are still some issues remaing with the
	program memory viewer).
	* src/i2c-ee.cc, src/ioports.cc, src/ioports.h, src/p12x.cc,
	src/p12x.h: The eeprom i2c interface is broken...

2005-07-23 Borut Razem <borut.razem@siol.net>
	* gpsim/gpsim.vcproj, doc/gpsimWin32.html: use pthreads-w32-2-7-0-release
	* cli/scan.ll: corrected typo

2005-07-22 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_disasm.cc: rnages were disassembling wrong addresses
	* gui/gui_src_asm.cc: cleanup
	* src/12bit-processors.cc, src/14bit-processors.cc,
	  src/14bit-registers.cc, src/14bit-tmrs.cc, src/attributes.cc,
	  src/gpsim_classes.h:
	Implenting new ioport design for 12bit cores.
	Fixed bugs with resets.
	* src/16bit-hexdecode.cc, src/16bit-instructions.cc,
	  src/16bit-processors.h, src/16bit-registers.cc, src/cod.cc:
	16bit processors were not getting loaded properly due to some
	bugs with address <-> index mapping

2005-07-21 Scott Dattalo <scott@dattalo.com>
	* src/ioports.h, src/ioports.cc: classes derived from PortRegister
	can now specify the type of PinModule class.
	
2005-07-15 Scott Dattalo <scott@dattalo.com>
	* src/12bit-processors.cc, src/14bit-processors.cc,
	src/14bit-processors.h, src/16bit-registers.cc,
	src/16bit-registers.h, src/intcon.h, src/ioports.cc,
	src/ioports.h, src/p16f62x.cc, src/p16f87x.cc, src/p16x6x.cc,
	src/p16x6x.h, src/p16x7x.cc, src/p16x7x.h, src/p16x8x.cc,
	src/p16x8x.h, src/pic-processor.cc, src/pic-processor.h,
	src/registers.cc, src/registers.h, src/stimuli.cc, src/stimuli.h,
	src/tmr0.cc, src/tmr0.h, src/uart.cc, src/uart.h:

	I/O Port Redesign: These files have been updated to accommodate a